--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,9 @@
-[  "vim.insertModeKeyBindings": [
-    {
-      "before": ["k", "j"],
-      "after": ["<Esc>"]
-    }
+{
+    "vim.insertModeKeyBindings": [
+        {
+          "before": ["k", "j"],
+          "after": ["<Esc>"]
+        }
   ],
   "vim.normalModeKeyBindingsNonRecursive": [
     {
@@ -14,3 +15,4 @@
       "after": ["5", "j"]
     }
   ]
+}
