--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,9 +12,70 @@ bind-key -n C-j previous-window
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/wand/.tmux.conf
 
+# remove the escape delay
+set -sg escape-time 0
+
+# set mouse mode on
+set -g mouse on 
+
+# set vi mode
+set-window-option -g mode-keys vi
+
+# add TMP and plugins
+run '~/wand/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 # Split panes using \ and - (\ because it doesn't require shift)
 # Start in same directory when splitting windows
 bind '\' split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
+
+# Looks
+# don't do anything when a 'bell' rings
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# clock mode
+setw -g clock-mode-colour colour1
+
+# copy mode
+setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+# pane borders
+set -g pane-border-style 'fg=colour1'
+set -g pane-active-border-style 'fg=colour3'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'fg=colour1'
+set -g status-left ''
+set -g status-right '%Y-%m-%d %H:%M '
+set -g status-right-length 50
+set -g status-left-length 10
+
+setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
+setw -g window-status-current-format ' #I #W #F '
+
+setw -g window-status-style 'fg=colour1 dim'
+setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+
+setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour2 bg=colour0 bold'
