--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,10 +21,11 @@ set -g mouse on
 # set vi mode
 set-window-option -g mode-keys vi
 
-# add TMP and plugins
-run '~/wand/tpm/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
+
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
