--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,17 +21,12 @@ set -g mouse on
 # set vi mode
 set-window-option -g mode-keys vi
 
-run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
+# Specify Catppuccin theme file if available (if using a tmux theme manager)
+run-shell "~/.tmux/themes/catppuccin/catppuccin.tmux"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
@@ -43,40 +38,34 @@ bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
-# Looks
-# don't do anything when a 'bell' rings
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
+# Visual configuration using Catppuccin colors
+# Catppuccin Macchiato color palette:
+# Lavender (#B4BEFE), Sapphire (#8AADF4), Mauve (#C6AAE8), Rosewater (#F5E0DC), Surface0 (#363A4F), Base (#24273A)
 
-# clock mode
-setw -g clock-mode-colour colour1
+# Pane borders
+set -g pane-border-style 'fg=#363A4F'
+set -g pane-active-border-style 'fg=#8AADF4'
 
-# copy mode
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
-
-# pane borders
-set -g pane-border-style 'fg=colour1'
-set -g pane-active-border-style 'fg=colour3'
-
-# statusbar
+# Status bar
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'fg=colour1'
-set -g status-left ''
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-set -g status-left-length 10
+set -g status-style 'fg=#F5E0DC,bg=#24273A'
+set -g status-left '#[fg=#B4BEFE] ❄ #S '
+set -g status-right '#[fg=#8AADF4] %Y-%m-%d %H:%M '
 
-setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
-setw -g window-status-current-format ' #I #W #F '
+setw -g window-status-current-style 'fg=#24273A,bg=#B4BEFE bold'
+setw -g window-status-current-format ' #I #[fg=#F5E0DC]#W #[fg=#8AADF4]#F '
+setw -g window-status-style 'fg=#8AADF4 dim'
+setw -g window-status-format ' #I #[fg=#C6AAE8]#W #[fg=#8AADF4]#F '
 
-setw -g window-status-style 'fg=colour1 dim'
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+# Bell styles and alerts
+setw -g window-status-bell-style 'fg=#C6AAE8,bg=#24273A bold'
 
-setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+# Messages
+set -g message-style 'fg=#F5E0DC,bg=#8AADF4 bold'
 
-# messages
-set -g message-style 'fg=colour2 bg=colour0 bold'
+# Clock mode
+setw -g clock-mode-colour '#C6AAE8'
+
+# Copy mode
+setw -g mode-style 'fg=#F5E0DC bg=#363A4F bold'
