Added pane bg color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,10 @@ unbind %
 # Catppuccin Macchiato color palette:
 # Lavender (#B4BEFE), Sapphire (#8AADF4), Mauve (#C6AAE8), Rosewater (#F5E0DC), Surface0 (#363A4F), Base (#24273A)
 
+# Pane background color (using Catppuccin Surface0 for a soft look)
+set -g window-style 'bg=#363A4F'
+set -g window-active-style 'bg=#24273A'  # Active pane slightly darker for contrast
+
 # Pane borders
 set -g pane-border-style 'fg=#363A4F'
 set -g pane-active-border-style 'fg=#8AADF4'
