Customized the tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,15 +21,38 @@ set -g mouse on
 # set vi mode
 set-window-option -g mode-keys vi
 
-# Specify Catppuccin theme file if available (if using a tmux theme manager)
-run-shell "~/.tmux/themes/catppuccin/catppuccin.tmux"
+# Rose Pine Moon theme configuration
+set -g @rose_pine_variant 'moon'
+set -g @rose_pine_host 'off'
+set -g @rose_pine_user 'on'
+set -g @rose_pine_directory 'off'
+set -g @rose_pine_bar_bg_disable 'off'
+set -g @rose_pine_date_time '%m-%d %H:%M'
+set -g @rose_pine_window_tabs_enabled 'off'
+set -g @rose_pine_show_current_program 'off'
+
+# Ensure proper terminal colors
+set-option -sa terminal-overrides ',xterm*:Tc'
+set -g default-terminal "screen-256color"
+
+# Set Rose Pine Moon background for all panes
+set -g window-style 'bg=#232136'
+set -g window-active-style 'bg=#232136'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'rose-pine/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Custom window status format (after plugin initialization to override)
+setw -g window-status-format ' #I #W '
+setw -g window-status-current-format '#[bg=#c4a7e7,fg=#232136] #I #W #[bg=default,fg=default]'
+
+# Remove the current window title display from status-left/status-right
+set -g status-left '#[fg=#9ccfd8] ❄ #S '
 
 # Split panes using \ and - (\ because it doesn't require shift)
 # Start in same directory when splitting windows
@@ -38,38 +61,3 @@ bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
-# Visual configuration using Catppuccin colors
-# Catppuccin Macchiato color palette:
-# Lavender (#B4BEFE), Sapphire (#8AADF4), Mauve (#C6AAE8), Rosewater (#F5E0DC), Surface0 (#363A4F), Base (#24273A)
-
-# Pane background color (using Catppuccin Surface0 for a soft look)
-set -g window-style 'bg=#363A4F'
-set -g window-active-style 'bg=#24273A'  # Active pane slightly darker for contrast
-
-# Pane borders
-set -g pane-border-style 'fg=#363A4F'
-set -g pane-active-border-style 'fg=#8AADF4'
-
-# Status bar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'fg=#F5E0DC,bg=#24273A'
-set -g status-left '#[fg=#B4BEFE] ❄ #S '
-set -g status-right '#[fg=#8AADF4] %Y-%m-%d %H:%M '
-
-setw -g window-status-current-style 'fg=#24273A,bg=#B4BEFE bold'
-setw -g window-status-current-format ' #I #[fg=#F5E0DC]#W #[fg=#8AADF4]#F '
-setw -g window-status-style 'fg=#8AADF4 dim'
-setw -g window-status-format ' #I #[fg=#C6AAE8]#W #[fg=#8AADF4]#F '
-
-# Bell styles and alerts
-setw -g window-status-bell-style 'fg=#C6AAE8,bg=#24273A bold'
-
-# Messages
-set -g message-style 'fg=#F5E0DC,bg=#8AADF4 bold'
-
-# Clock mode
-setw -g clock-mode-colour '#C6AAE8'
-
-# Copy mode
-setw -g mode-style 'fg=#F5E0DC bg=#363A4F bold'
