Changes tmux and lvim theme to tokyo nighst

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ bind-key -n C-k next-window
 bind-key -n C-j previous-window
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/wand/.tmux.conf
+bind r source-file ~/.tmux.conf
 
 # remove the escape delay
 set -sg escape-time 0
@@ -21,38 +21,25 @@ set -g mouse on
 # set vi mode
 set-window-option -g mode-keys vi
 
-# Rose Pine Moon theme configuration
-set -g @rose_pine_variant 'moon'
-set -g @rose_pine_host 'off'
-set -g @rose_pine_user 'on'
-set -g @rose_pine_directory 'off'
-set -g @rose_pine_bar_bg_disable 'off'
-set -g @rose_pine_date_time '%m-%d %H:%M'
-set -g @rose_pine_window_tabs_enabled 'off'
-set -g @rose_pine_show_current_program 'off'
-
 # Ensure proper terminal colors
 set-option -sa terminal-overrides ',xterm*:Tc'
 set -g default-terminal "screen-256color"
 
-# Set Rose Pine Moon background for all panes
-set -g window-style 'bg=#232136'
-set -g window-active-style 'bg=#232136'
+# Tokyo Night color scheme (manual)
+set -g status-bg "#1a1b26"
+set -g status-fg "#c0caf5"
+set -g status-left "#[bg=#7aa2f7,fg=#1a1b26] #S "
+set -g status-right "#[bg=#414868,fg=#c0caf5] #(whoami) #[bg=#7aa2f7,fg=#1a1b26] %m-%d %H:%M "
+set -g window-status-format "#[fg=#565f89] #W "
+set -g window-status-current-format "#[bg=#565f89,fg=#c0caf5] #W "
+set -g status-left-length 50
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'rose-pine/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-# Custom window status format (after plugin initialization to override)
-setw -g window-status-format ' #I #W '
-setw -g window-status-current-format '#[bg=#c4a7e7,fg=#232136] #I #W #[bg=default,fg=default]'
-
-# Remove the current window title display from status-left/status-right
-set -g status-left '#[fg=#9ccfd8] ❄ #S '
 
 # Split panes using \ and - (\ because it doesn't require shift)
 # Start in same directory when splitting windows
@@ -60,4 +47,3 @@ bind '\' split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
-
