--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set-window-option -g mode-keys vi
 
 # Ensure proper terminal colors
 set-option -sa terminal-overrides ',xterm*:Tc'
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # Tokyo Night color scheme (manual)
 set -g status-bg "#1a1b26"
