Added Min theme schemes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,14 +25,29 @@ set-window-option -g mode-keys vi
 set-option -sa terminal-overrides ',xterm*:Tc'
 set -g default-terminal "tmux-256color"
 
-# Tokyo Night color scheme (manual)
-set -g status-bg "#1a1b26"
-set -g status-fg "#c0caf5"
-set -g status-left "#[bg=#7aa2f7,fg=#1a1b26] #S "
-set -g status-right "#[bg=#414868,fg=#c0caf5] #(whoami) #[bg=#7aa2f7,fg=#1a1b26] %m-%d %H:%M "
-set -g window-status-format "#[fg=#565f89] #W "
-set -g window-status-current-format "#[bg=#565f89,fg=#c0caf5] #W "
+# Min Theme color scheme (manual)
+set -g status-bg "#212121"
+set -g status-fg "#c1c1c1"
+set -g status-left "#[bg=#6b737c,fg=#212121] #S "
+set -g status-right "#[bg=#383838,fg=#c1c1c1] #(whoami) #[bg=#6b737c,fg=#212121] %m-%d %H:%M "
+set -g window-status-format "#[fg=#6b737c] #W "
+set -g window-status-current-format "#[bg=#383838,fg=#c1c1c1] #W "
 set -g status-left-length 50
+
+# Pane border colors
+set -g pane-border-style "fg=#2A2A2A"
+set -g pane-active-border-style "fg=#6b737c"
+
+# Message colors
+set -g message-style "bg=#383838,fg=#c1c1c1"
+set -g message-command-style "bg=#383838,fg=#c1c1c1"
+
+# Copy mode colors
+set -g mode-style "bg=#383838,fg=#c1c1c1"
+
+# Set the default background color for all panes
+set -g window-style "bg=#212121"
+set -g window-active-style "bg=#212121"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
